add responsive to dashboard2

--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -229,6 +229,9 @@
     padding: 10px;
     margin-bottom: 5px;
     font-size: 1.2vw;
+    display: flex;
+    flex: row;
+    justify-content: space-between;
 }
 
 /* 20 */
@@ -243,7 +246,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
 }
 
 /* 21 */
@@ -258,12 +260,13 @@
 }
 
 /* 22 */
-.message-feature-button {
+.message-feature-button, .message-feature-empty-button {
     background-color: transparent;
     border: none;
     color: white;
     font-size: 1vw;
 }
+
 
 /* 23 */
 .message-feature-empty-button {
@@ -599,7 +602,30 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        max-width: 60vw;
     }
+    /* 21 */
+    .message-time-container {
+        display: flex;
+        flex-direction: column;
+        height: 4vh;
+    }
+    /* 21 */
+    .message-span{
+        font-size: 3vw;
+        font-family: roboto;
+        word-wrap: break-word;    
+        word-break: break-word;   
+        overflow-wrap: break-word; 
+        white-space: normal;      
+        line-height: 1.5;
+    }
+    /* 24 */
+    .time-span {
+        font-size: 1.5vw;
+        margin-left: 5px;
+    }
+    
     /* 1 */
     .dashboard-input-elements-container-select-stage{
         width: 85vw;
