--- a/client/src/Components/Home/index.css
+++ b/client/src/Components/Home/index.css
@@ -1,79 +1,142 @@
-.Home-main-container{
+/* CSS */
+.Home-main-container {
     background-image: url("/public/images/bg6.png");
     background-size: cover;
-    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
 }
-.home-main-card-container{
-    padding: 100px;
+
+.home-main-card-container {
+    padding: 50px;
+    text-align: center;
 }
-.home-main-heading{
+
+.home-main-heading {
     color: white;
-    font-size: 50px;
+    font-size: 6vw;
     font-family: roboto;
 }
 
-.echo-span-tag{
- color: rgb(241, 183, 21);
- font-size: 55px;
- font-weight: bold;
+.echo-span-tag {
+    color: rgb(241, 183, 21);
+    font-size: 6.5vw;
+    font-weight: bold;
 }
-.home-manin-paragraph{
+
+.home-manin-paragraph {
     color: white;
-    width: 630px;
+    max-width: 90%;
+    margin: 0 auto;
     padding-top: 20px;
-    font-size: 20px;
+    font-size: 4vw;
     font-family: roboto;
 }
-.home-main-button{
+
+.home-main-button {
     background-color: rgb(4, 75, 133);
-    padding: 5px;
-    width: 200px;
+    padding: 10px;
+    width: 60%;
     margin-top: 10px;
     color: white;
-    font-size: 20px;
+    font-size: 4vw;
     font-weight: bold;
     font-family: roboto;
     border-radius: 5px;
+    border: none;
 }
-.home-main-button:hover{
+
+.home-main-button:hover {
     background-color: rgb(187, 100, 1);
 }
-.signin-main-container-home{
+
+.signin-main-container-home {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 30px;
 }
-.home-signin-main-card-container{
-    margin: 80px;
-    width: 300px;
+
+.home-signin-main-card-container {
+    width: 80%;
+    max-width: 400px;
     padding: 20px;
     box-shadow: 0 2px 8px 0 rgba(14, 13, 13, 0.678), 0 4px 20px 0 rgba(0, 0, 0, 0.603);
+    background-color: white;
+    border-radius: 10px;
+    text-align: center;
 }
-.home-signin-card-container{
+
+.home-signin-card-container {
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
-.signin-icon{
-    font-size: 39px;
-    padding-left: 10px;
+
+.signin-icon {
+    font-size: 6vw;
     color: rgb(187, 100, 1);
 }
-.home-signin-heading{
-    font-size: 36px;   
+
+.home-signin-heading {
+    font-size: 6vw;
     font-family: roboto;
     font-weight: bold;
 }
-.home-signin-button{
-    width: 250px;
-    padding: 8px;
-    font-size: 20px;
+
+.home-signin-button {
+    width: 80%;
+    padding: 10px;
+    font-size: 4vw;
     font-weight: bold;
     background-color: rgb(187, 100, 1);
-  border: 10px;
-  border-radius: 5px;
+    border: none;
+    border-radius: 5px;
     color: white;
-
-
+    margin-top: 10px;
 }
-.home-signin-paragraph{
-    font-size: 16px;
+
+.home-signin-paragraph {
+    font-size: 3.5vw;
+    margin-top: 10px;
+}
+
+/* Media Queries for Larger Screens */
+@media screen and (min-width: 768px) {
+    .home-main-heading {
+        font-size: 40px;
+    }
+
+    .echo-span-tag {
+        font-size: 45px;
+    }
+
+    .home-manin-paragraph {
+        font-size: 18px;
+        max-width: 700px;
+    }
+
+    .home-main-button {
+        width: 200px;
+        font-size: 18px;
+    }
+
+    .home-signin-main-card-container {
+        margin: 20px;
+    }
+
+    .signin-main-container-home {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .home-signin-paragraph {
+        font-size: 14px;
+    }
 }
