--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -9,12 +9,12 @@
 
 /* 2,2 */
 .dashboard-sidebar-main-container {
-    width: 22vw;
+    width: 22vw; /* Default width for desktop */
     box-shadow: 0 2px 8px 0 rgba(14, 13, 13, 0.678), 0 4px 20px 0 rgba(0, 0, 0, 0.603);
-    padding: 0.5vw;
+    padding: 0.5vw; /* Default padding */
     background-image: url("https://e0.pxfuel.com/wallpapers/249/8/desktop-wallpaper-chat-whatsapp-chat-thumbnail.jpg");
     color: rgb(255, 244, 244);
-    height: 84vh;
+    height: 84vh; /* Fixed height */
     overflow-y: auto;
     overflow-x: hidden;
     background-size: cover;
@@ -79,20 +79,24 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
-    border: 2px solid white;
-    border-radius: 50%;
-    font-size: 20px;
+    width: 50px; 
+    height: 50px; 
+    border: 2px solid white; 
+    border-radius: 50%; 
+    font-size: 1.2vw; 
     text-align: center;
-    line-height: 50px;
+    line-height: 50px; 
 }
 
 /* 8,8,8 */
 .sidebar-profile-heading {
-    font-family: roboto;
+    font-family: Roboto, sans-serif;
     padding-left: 10px;
     font-size: 1.5vw;
+    white-space: nowrap; 
+    overflow: hidden; 
+    text-overflow: ellipsis;
+    max-width: 100%; 
 }
 
 /* 9 */
@@ -220,6 +224,7 @@
 .message-sender {
     background-image: url("https://e0.pxfuel.com/wallpapers/249/8/desktop-wallpaper-chat-whatsapp-chat-thumbnail.jpg");
     color: white;
+    background-size: cover;
     align-self: flex-end;
 }
 
@@ -232,6 +237,8 @@
     display: flex;
     flex: row;
     justify-content: space-between;
+    max-width: 40vw;
+
 }
 
 /* 20 */
@@ -246,6 +253,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    max-width: 10vw;
 }
 
 /* 21 */
@@ -405,92 +413,75 @@
 }
 
 @media (max-width: 1024px) {
-    /* 1 */
-    .dashboard-total-container {
-        flex-direction: column;
+    .sidebar-profile-icon {
+        width: 45px; 
+        height: 45px; 
+        border: 1.8px solid white; 
+        font-size: 2vw; 
+        line-height: 45px; 
     }
-
-    /* 2 */
+    .sidebar-profil-container-inactive, 
+    .sidebar-profil-container-active {
+        width: 25vw; 
+        height: 7vw; 
+        font-size: 1.2rem; 
+    }
+    .search-input {
+        height: 6vh;
+        width: 25vw; 
+        padding-left: 1.5vw; 
+        border-radius: 18px; 
+    }
     .dashboard-sidebar-main-container {
-        width: 100%;
-        height: 20vh;
+        width: 25vw; 
+        padding: 1vw;
     }
-
-    /* 11 */
-    .dashboard-chat-container {
-        width: 100%;
-        height: 70vh;
+    .sidebar-profile-container {
+        padding: 8px; 
+        height: 7vh; 
+        width: 23vw; 
     }
-
-    /* 28 */
-    .dashboard-chat-main-container {
-        width: 100%;
-        height: 20vh;
-        top: 60vh;
-    }
-
-    /* 1 */
-    .dashboard-input-text {
-        width: 80%;
-    }
-
-    /* 1 */
-    .dashboard-text-emoji-container-send {
-        font-size: 2vw;
-    }
+   
 }
 
 @media (max-width: 768px) {
-    /* 8,8,8 */
-    .sidebar-profile-heading {
-        font-size: 4vw;
-    }
-
-    /* 7,7,7 */
     .sidebar-profile-icon {
-        width: 40px;
-        height: 40px;
-        font-size: 16px;
-        line-height: 40px;
+        width: 40px; 
+        height: 40px; 
+        border: 1.5px solid white; 
+        font-size: 2.5vw; 
+        line-height: 40px; 
     }
-
-    /* 16 */
-    .dashboard-chat-box-container {
-        height: 70vh;
-        width: 95vw;
+    .sidebar-profil-container-inactive, 
+    .sidebar-profil-container-active {
+        width: 30vw; 
+        height: 8vw; 
+        font-size: 1.1rem; 
     }
-
-    /* 28 */
-    .dashboard-chat-main-container {
-        height: 15vh;
+    .search-input {
+        height: 6.5vh;
+        width: 30vw; 
+        padding-left: 2vw; 
+        border-radius: 15px; 
     }
-
-    /* 1 */
-    .dashboard-input-text {
-        height: 5vh;
-        font-size: 3vw;
-    }
-
-    /* 1 */
-    .dashboard-text-emoji-container-send {
-        font-size: 4vw;
-    }
-
-    /* 2 */
     .dashboard-sidebar-main-container {
-        height: 25vh;
+        width: 30vw; 
+        padding: 1.5vw; 
+    }
+    .sidebar-profile-container {
+        padding: 8px; 
+        height: 7vh; 
+        width: 26vw; 
     }
 
-    /* 13,14 */
-    .last-seen, .last-seen-online {
-        font-size: 2vw;
-    }
+    
 }
 
 @media (max-width: 480px) {
     /* 1 */
     .dashboard-total-container{
         height: 93vh;
+        flex-direction: column;
     }
 
     /* 2 */
@@ -590,6 +581,10 @@
         border-radius: 20px;
         padding-left: 3vw;
         border: none;
+    }
+    /* 9 */
+    .status-dot {
+        top: 30px;
     }
 
     /* 19,20 */
