--- a/client/src/Components/Navbar/index.css
+++ b/client/src/Components/Navbar/index.css
@@ -9,6 +9,7 @@
     margin-bottom: 0;
     align-items: center;
     padding: 1vw 2vw; /* Added padding for better spacing on smaller screens */
+    height: 11vh;
 }
 
 /* Navbar Elements */
