--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -182,7 +182,7 @@
 
 /* 16 */
 .dashboard-chat-box-container {
-    height: 68vh;
+    height: 65vh;
     width: 73vw;
     display: flex;
     flex-direction: column;
@@ -233,7 +233,7 @@
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 5px;
-    font-size: 1.2vw;
+    font-size: 1vw;
     display: flex;
     flex: row;
     justify-content: space-between;
@@ -253,6 +253,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: flex-end;
     max-width: 10vw;
 }
 
@@ -286,6 +287,13 @@
 .time-span {
     font-size: 0.8vw;
     margin-left: 5px;
+}
+.single-tik, .double-tik, .double-tik-blue{
+    font-size: 1.5vw;
+    margin-left: 0.2vw;
+}
+.double-tik-blue{
+    color: rgb(56, 143, 250);
 }
 
 /* 25 */
@@ -460,7 +468,7 @@
     }
     .search-input {
         height: 6.5vh;
-        width: 30vw; 
+        width: 25vw; 
         padding-left: 2vw; 
         border-radius: 15px; 
     }
