--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -310,7 +310,10 @@
 
 /* 27 */
 .emoji-input{
-    font-size: 3vw;
+    font-size: 1vw;
+    position: relative;
+    left: 50vw;
+    bottom: 50vh;
 }
 
 /* 28 */
@@ -449,6 +452,14 @@
         height: 7vh; 
         width: 23vw; 
     }
+    .emoji-input{
+        font-size: 2vw;
+        position: relative;
+        left: 0vw;
+        bottom: 0vh;
+        top: 5vh;
+        width: 90vw;
+    }
    
 }
 
@@ -480,6 +491,13 @@
         padding: 8px; 
         height: 7vh; 
         width: 26vw; 
+    }
+    .emoji-input{
+        font-size: 2vw;
+        position: relative;
+        left: 0vw;
+        bottom: 0vh;
+        width: 90vw;
     }
 
     
@@ -544,8 +562,9 @@
 
     /* 1 */
     .dashboard-input-text {
-        width: 75%;
-        font-size: 4vw;
+        width: 90%;
+        height: 4vh;
+        font-size: 3vw;
         margin-left: 1vw;
     }
 
@@ -640,5 +659,24 @@
         font-weight: bold;
         color: black;
         padding: 0px;
+    }
+    .emoji-input{
+        font-size: 2vw;
+        position: relative;
+        left: 0vw;
+        bottom: 0vh;
+        top: 5vh;
+        width: 90vw;
+    }
+    .unread-count {
+        background-color: green;
+        font-size: 2.5vw;
+        height: 15px;
+        width: 15px;
+        color: white;
+        border-radius: 50%;
+        text-align: center;
+        margin-left: 5vw;
+        margin-bottom: 1vh;
     }
 }
