--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -2,19 +2,19 @@
 .dashboard-total-container {
     display: flex;
     flex-direction: row;
-    margin: 0.5vw;
-    height: 87vh;
+    margin: 10px;
+    height: 87%;
     overflow: hidden;
 }
 
 /* 2,2 */
 .dashboard-sidebar-main-container {
-    width: 22vw; /* Default width for desktop */
+    width: 300px; 
     box-shadow: 0 2px 8px 0 rgba(14, 13, 13, 0.678), 0 4px 20px 0 rgba(0, 0, 0, 0.603);
-    padding: 0.5vw; /* Default padding */
+    padding: 5px; 
     background-image: url("https://e0.pxfuel.com/wallpapers/249/8/desktop-wallpaper-chat-whatsapp-chat-thumbnail.jpg");
     color: rgb(255, 244, 244);
-    height: 84vh; /* Fixed height */
+    height: 84vh; 
     overflow-y: auto;
     overflow-x: hidden;
     background-size: cover;
@@ -28,25 +28,27 @@
     align-items: center;
     padding: 10px;
     border: 2px solid;
-    height: 9vh;
-    width: 21vw;
+    height: 60px;
+    width: 285px;
+    margin-bottom: 5px;
 }
 
 /* 4 */
 .back-button {
     background-color: transparent;
     border: none;
-    font-size: 2vw;
+    font-size: 24px;
     color: white;
     margin-bottom: auto;
+    margin-bottom: 10px;
 }
 
 /* 5 */
 .search-input{
-    height: 5vh;
-    width: 20vw;
-    border-radius: 20px;
-    padding-left: 1vw;
+    height: 30px;
+    width: 280px;
+    border-radius: 15px;
+    padding-left: 10px;
     border: none;
 }
 .search-input:focus{
@@ -63,9 +65,8 @@
     border: none;
     color: white;
     cursor: pointer;
-    width: 21vw;
-    height: 4vw;
-    margin-top: 1vh;
+    width: 280px;
+    height: 60px;
 }
 
 /* 6,6 */
@@ -79,24 +80,26 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    width: 50px; 
-    height: 50px; 
+    width: 40px; 
+    height: 40px; 
     border: 2px solid white; 
     border-radius: 50%; 
-    font-size: 1.2vw; 
+    font-size: 16px; 
     text-align: center;
-    line-height: 50px; 
+    line-height: 40px; 
+    margin-top: 10px;
 }
 
 /* 8,8,8 */
 .sidebar-profile-heading {
     font-family: Roboto, sans-serif;
     padding-left: 10px;
-    font-size: 1.5vw;
+    font-size: 20px;
     white-space: nowrap; 
     overflow: hidden; 
     text-overflow: ellipsis;
     max-width: 100%; 
+    margin-top: 5px;
 }
 
 /* 9 */
@@ -106,26 +109,26 @@
     height: 12px;
     background-color: green;
     border-radius: 50%;
-    top: 38px;
+    top: 28px;
     right: 5px;
 }
 
 /* 10 */
 .unread-count {
     background-color: green;
-    font-size: 0.8vw;
-    height: 20px;
-    width: 20px;
+    font-size: 10px;
+    height: 16px;
+    width: 16px;
     color: white;
     border-radius: 50%;
     text-align: center;
-    margin-left: 1vw;
+    margin-left: 20px;
 }
 
 /* 11 */
 .dashboard-chat-container {
     position: relative;
-    width: 76vw;
+    width: 880px;
     height: 84vh;
     display: flex;
     flex-direction: column;
@@ -133,7 +136,7 @@
     align-items: flex-start;
     overflow-y: auto;
     margin-left: 6px;
-    padding: 1vw;
+    padding: 5px;
 }
 
 /* 11 */
@@ -160,6 +163,7 @@
 /* 12 */
 .name-search{
     color: black;
+    font-size: 24px;
 }
 
 /* 13 */
@@ -170,7 +174,7 @@
 
 /* 13,14 */
 .last-seen-online, .last-seen {
-    font-size: 1vw;
+    font-size: 12px;
 }
 
 /* 15 */
@@ -182,12 +186,12 @@
 
 /* 16 */
 .dashboard-chat-box-container {
-    height: 65vh;
-    width: 73vw;
+    height: 400px;
+    width: 860px;
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    padding: 1vw;
+    padding: 5px;
 }
 
 /* 16 */
@@ -203,7 +207,7 @@
 
 /* 16 */
 .dashboard-chat-box-container::-webkit-scrollbar {
-    width: 5px;
+    width: 3px;
 }
 
 /* 17 */
@@ -212,7 +216,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
 }
 
 /* 18 */
@@ -231,13 +234,13 @@
 /* 19,20 */
 .message-sender, .message-receiver {
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
     margin-bottom: 5px;
-    font-size: 1vw;
+    font-size: 16px;
     display: flex;
     flex: row;
     justify-content: space-between;
-    max-width: 40vw;
+    max-width: 400px;
 
 }
 
@@ -254,18 +257,18 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-    max-width: 10vw;
 }
 
 /* 21 */
 .message-span{
-    font-size: 1.5vw;
+    font-size: 16px;
     font-family: roboto;
     word-wrap: break-word;    
     word-break: break-word;   
     overflow-wrap: break-word; 
     white-space: normal;      
-    line-height: 1.5;
+    line-height: 1;
+
 }
 
 /* 22 */
@@ -273,24 +276,23 @@
     background-color: transparent;
     border: none;
     color: white;
-    font-size: 1vw;
+    font-size: 10px;
 }
 
 
 /* 23 */
 .message-feature-empty-button {
     width: 30px;
-    font-size: 1vw;
+    font-size: 10px;
 }
 
 /* 24 */
 .time-span {
-    font-size: 0.8vw;
-    margin-left: 5px;
+    font-size: 8px;
 }
 .single-tik, .double-tik, .double-tik-blue{
-    font-size: 1.5vw;
-    margin-left: 0.2vw;
+    font-size: 14px;
+    margin-left: 5px;
 }
 .double-tik-blue{
     color: rgb(56, 143, 250);
@@ -310,17 +312,17 @@
 
 /* 27 */
 .emoji-input{
-    font-size: 1vw;
+    font-size: 10px;
     position: relative;
-    left: 50vw;
-    bottom: 50vh;
+    left: 500px;
+    bottom: 400px;
 }
 
 /* 28 */
-.dashboard-chat-main-container {
-    width: 73vw;
-    height: 9vh;
-    padding: 0.5vw;
+.dashboard-chat-main-container  {
+    width: 850px;
+    height: 55px;
+    padding-left: 5px;
     border-radius: 5px;
     background-image: url("https://e0.pxfuel.com/wallpapers/249/8/desktop-wallpaper-chat-whatsapp-chat-thumbnail.jpg");
     display: flex;
@@ -328,7 +330,7 @@
     justify-content: space-between;
     align-items: center;
     position: absolute;
-    top: 75vh;
+    top: 100%;
 }
 
 /* 1 */
@@ -337,20 +339,20 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 70vw;
-    height: 7vh;    
+    width: 700px;
+    height: 45px;    
     background-color: white;
-    padding-left: 0.7vw;
+    padding-left: 10px;
     align-items: center;
     border-radius: 10px;
 }
 
 /* 1 */
 .dashboard-input-text {
-    width: 61vw;
-    height: 7vh;
-    padding-left: 0.5vw;
-    border-radius: 5px;
+    width: 600px;
+    height: 40px;
+    padding-left: 10px;
+    border-radius: 4px;
     border: none;
 }
 
@@ -367,25 +369,25 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 70vw;
-    height: 7vh;
-    padding-right: 0.7vw;
+    width: 800px;
+    height: 40px;
+    padding-right: 10px;
     border-radius: 10px;
 }
 
 /* 1 */
 .dashboard-text-emoji-button {
-    font-size: 2.5vw;
+    font-size: 24px;
     background-color: transparent;
     border: none;
 }
 
 /* 1 */
 .dashboard-text-emoji-container-send {
-    font-size: 3vw;
-    margin-left: 0.5vw;
-    padding-left: 0.5vw;
-    width: 3vw;
+    font-size: 24px;
+    margin-left: 5px;
+    padding-left: 5px;
+    width: 20px;
     color: rgb(14, 104, 84);
     cursor: pointer;
 }
@@ -401,18 +403,12 @@
     background-color: transparent;
 }
 
-
-
-
-
-
-
-
 /* 1 */
 .selected-items {
-    font-size: 1vw;
+    font-size: 15px;
     font-weight: bold;
     color: black;
+    margin-top: 15px;
 }
 
 /* 1 */
@@ -423,35 +419,52 @@
     align-items: center;
 }
 
-@media (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
+    .sidebar-profile-container {
+        height: 60px;
+        width: 240px;
+    }
+    .search-input{
+        width: 180px;
+        border-radius: 15px;
+        padding-left: 10px;
+        border: none;
+    }
+    
     .sidebar-profile-icon {
-        width: 45px; 
-        height: 45px; 
+        width: 40px; 
+        height: 40px; 
         border: 1.8px solid white; 
-        font-size: 2vw; 
-        line-height: 45px; 
+        font-size: 16px; 
+        line-height: 40px; 
     }
     .sidebar-profil-container-inactive, 
     .sidebar-profil-container-active {
-        width: 25vw; 
-        height: 7vw; 
-        font-size: 1.2rem; 
+        width: 240px;
+        height: 50px;
     }
-    .search-input {
-        height: 6vh;
-        width: 25vw; 
-        padding-left: 1.5vw; 
-        border-radius: 18px; 
+    .sidebar-profile-heading {
+        font-size: 18px;
     }
-    .dashboard-sidebar-main-container {
-        width: 25vw; 
-        padding: 1vw;
+    .status-dot {
+        width: 10px;
+        height: 10px;
+        top: 30px;
     }
-    .sidebar-profile-container {
-        padding: 8px; 
-        height: 7vh; 
-        width: 23vw; 
+    .dashboard-chat-box-container {
+        height: 400px;
+        width: 730px;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+        padding: 5px;
     }
+
+    .dashboard-chat-main-container  {
+        width: 730px;
+        height: 55px;
+    }
+    
     .emoji-input{
         font-size: 2vw;
         position: relative;
@@ -464,42 +477,56 @@
 }
 
 @media (max-width: 768px) {
+    .sidebar-profile-container {
+        height: 40px;
+        width: 174px;
+    }
+    .search-input{
+        width: 120px;
+        border-radius: 10px;
+        font-size: 10px;
+        padding-left: 5px;
+        height: 24px;
+    }
+    
     .sidebar-profile-icon {
-        width: 40px; 
-        height: 40px; 
-        border: 1.5px solid white; 
-        font-size: 2.5vw; 
-        line-height: 40px; 
+        width: 28px; 
+        height: 28px; 
+        border: 1.4px solid white; 
+        font-size: 10px; 
+        line-height: 28px; 
     }
     .sidebar-profil-container-inactive, 
     .sidebar-profil-container-active {
-        width: 30vw; 
-        height: 8vw; 
-        font-size: 1.1rem; 
+        width: 174px;
+        height: 36px;
     }
-    .search-input {
-        height: 6.5vh;
-        width: 25vw; 
-        padding-left: 2vw; 
-        border-radius: 15px; 
+    .sidebar-profile-heading {
+        font-size: 16px;
     }
-    .dashboard-sidebar-main-container {
-        width: 30vw; 
-        padding: 1.5vw; 
+    .status-dot {
+        width: 10px;
+        height: 10px;
+        top: 20px;
     }
-    .sidebar-profile-container {
-        padding: 8px; 
-        height: 7vh; 
-        width: 26vw; 
-    }
-    .emoji-input{
-        font-size: 2vw;
-        position: relative;
-        left: 0vw;
-        bottom: 0vh;
-        width: 90vw;
+    .dashboard-chat-box-container {
+        height: 400px;
+        width: 520px;
+        display: flex;
+        flex-direction: column;
+        overflow-y: auto;
+        padding: 5px;
     }
 
+    .dashboard-chat-main-container  {
+        width: 520px;
+        height: 55px;
+    }
+    .dashboard-input-text {
+        width: 400px;
+        height: 40px;
+        font-size: 14px;
+    }
     
 }
 
@@ -509,22 +536,22 @@
         height: 93vh;
         flex-direction: column;
     }
-
     /* 2 */
     .dashboard-sidebar-main-container {
         width: 100%;
-        height: 40vh;
+        height: 400px;
         height: auto;
+        border: none;
     }
 
     /* 8,8,8 */
     .sidebar-profile-heading {
-        font-size: 5vw;
+        font-size: 18px;
     }
 
     /* 5,5 */
     .chatted-users-container{
-        height: 9vh;
+        height: 50px;
         overflow-y: auto;
         overflow-x: hidden;
     }
@@ -533,29 +560,30 @@
     .sidebar-profil-container-inactive, .sidebar-profil-container-active {
         height: auto;
         padding: 10px;
-        width: 96vw;
+        width: 96%;
+        height: 40px;
     }
 
     /* 11 */
     .dashboard-chat-container {
         width: 100%;
-        height: 80vh;
+        height: 400px;
     }
 
     /* 15 */
     .chat-container{
-        width: 95vw;
+        width: 90%;
     }
 
     /* 16 */
     .dashboard-chat-box-container {
-        height: 60vh;
-        width: 95vw;
+        width: 110%;
+        height: 350px;
     }
 
     /* 28 */
     .dashboard-chat-main-container {
-        top: 66vh;
+        top: 100%;
         height: 7vh;
         width: 95vw;
     }
@@ -611,7 +639,9 @@
     }
     /* 9 */
     .status-dot {
-        top: 30px;
+        top: 22px;
+        width: 8px;
+        height: 8px;
     }
 
     /* 19,20 */
@@ -668,6 +698,15 @@
         top: 5vh;
         width: 90vw;
     }
+    /* .keyboard-input{
+        font-size: 2vw;
+        position: relative;
+        left: 0vw;
+        bottom: 0vh;
+        top: 5vh;
+        width: 90vw;
+        height: 40vh;
+    } */
     .unread-count {
         background-color: green;
         font-size: 2.5vw;
