--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -61,6 +61,23 @@
 .search-input:focus{
     outline: none;
 }
+.add-user-to-room{
+    background-color: green;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-size: 10px;
+    width: 50px;
+    height: 20px;
+
+}
+
+.users-icon-name-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
 
 /* 6,6 */
 .sidebar-profil-container-inactive, .sidebar-profil-container-active {
@@ -83,7 +100,7 @@
 }
 
 /* 7,7,7 */
-.sidebar-profile-icon {
+.sidebar-profile-icon, .sidebar-group-icon, .sidebar-create-group-icon{
     position: relative;
     display: inline-flex;
     align-items: center;
@@ -96,6 +113,24 @@
     text-align: center;
     line-height: 40px; 
     margin-top: 10px;
+}
+
+.sidebar-group-icon{
+    background-color: white;
+    color: black;
+    font-size: 24px;
+    border: 1px solid black;
+}
+.sidebar-create-group-icon{
+    background-color: transparent;
+}
+
+.room-name-input{
+    width: 250px;
+    height: 40px;
+    border-radius: 5px;
+    margin-right: 5px;
+    padding-left: 5px;
 }
 
 /* 8,8,8 */
@@ -425,6 +460,7 @@
 .message-image{
     height: 200px;
     width: 150px;
+    border-radius: 5px;
 }
 .file-link{
     display: flex;
