--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -353,6 +353,7 @@
     background-color: transparent;
     color: black;
     border: none;
+    margin-right: 5px;
 }
 
 /* 27 */
@@ -762,11 +763,19 @@
         margin-bottom: 5px;
         font-size: 2.2vw;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         max-width: 60vw;
     }
+    .user-name-edit-container{
+        display: flex;
+        flex-direction: row;
+    }
+    .user-name-span{
+        font-size: 5px;
+    }
+    
     /* 21 */
     .message-time-container {
         display: flex;
