--- a/client/src/Components/Dashboard/index.css
+++ b/client/src/Components/Dashboard/index.css
@@ -262,6 +262,19 @@
     justify-content: center;
     align-items: center;
 }
+.chatted-user-details{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+}
+.info-button{
+    background-color: transparent;
+    color: black;
+    border: none;
+    font-size: 30px;
+}
 
 /* 18 */
 .select-input {
@@ -634,6 +647,13 @@
     }
     .name-search{
         font-size: 20px;
+    }
+    .search-user-2{
+        display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
     }
 
     .swipe-button{
