--- a/client/src/Components/Popups/index.css
+++ b/client/src/Components/Popups/index.css
@@ -32,6 +32,15 @@
     max-width: 600px;
     width: 100%;
   }
+
+  .edit-button-container{
+    align-self: flex-end;
+  }
+
+  .profile-main-content{
+    display: flex;
+    flex-direction: column;
+  }
   
   .profile-picture-container {
     position: relative;
@@ -105,6 +114,8 @@
     border-radius: 4px;
     cursor: pointer;
     align-self: flex-end;
+    margin-right: 5px;
+    margin-bottom: 10px;
   }
   
   .profile-location {
